--- a/src/css/app/splash.css
+++ b/src/css/app/splash.css
@@ -24,19 +24,56 @@
     text-transform: uppercase;
   }
   .a-splash--logo {
-    font-size: 1.25em;
+    filter: drop-shadow(0 0 1rem #000000);
+    line-height: 0.75;
+    opacity: 0;
     position: relative;
-    top: -2em;
+    transform: translateY(4rem);
+    transition: all 1s ease;
+    transition-property: opacity, transform;
   }
+    .a-app--screen-active .a-splash--logo {
+      opacity: 1;
+      transform: translateY(0);
+    }
   .a-splash--logoLine {
-    line-height: 0.666;
+    position: relative;
+    text-transform: uppercase;
+    z-index: 2;
   }
-    .a-splash--logoLine-1 {}
-    .a-splash--logoLine-2 {}
-    .a-splash--logoLine-3 {}
-  .a-splash--logoSymbol {}
+    .a-splash--logoLine span {
+      font-size: 1.5em;
+    }
+    .a-splash--logoLine-1 {
+      font-size: 2em;
+    }
+    .a-splash--logoLine-2 {
+      font-size: 6em;
+    }
+    .a-splash--logoLine-3 {
+      font-size: 8em;
+    }
+  .a-splash--logoSymbol {
+    animation: a-splash--logoSymbol 4s ease-in-out 0s infinite alternate both;
+    color: #FF0069;
+    font-size: 24em;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
+  }
 
 @keyframes a-splash--instruction {
+  0% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1.0;
+  }
+}
+
+@keyframes a-splash--logoSymbol {
   0% {
     opacity: 0.5;
   }
