--- a/src/css/app/game.css
+++ b/src/css/app/game.css
@@ -13,6 +13,12 @@
     width: 100%;
     z-index: 0;
   }
+  .a-game > * {
+    max-width: unset;
+  }
+  .a-game > * + * {
+    margin-top: unset;
+  }
 
   /* Information */
   .a-game--info {
@@ -156,4 +162,56 @@
   .a-game--scan[aria-disabled="true"] .a-game--scanProgress,
   .a-game--scan[aria-disabled="true"] .a-game--scanProgressBackground {
     display: none;
+  }
+
+  /* Dialog */
+  .a-game--dialog {
+    align-items: center;
+    background-color: hsla(335deg 100% 5% / 85%);
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    padding: 2rem;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 9;
+  }
+  .a-game--dialogContent {
+    background-color: rgba(0, 0, 0, 0.85);
+    max-width: 64rem;
+    padding: 2rem;
+    width: 100%;
+  }
+  .a-game--dialogContent > * + * {
+    margin-top: 1rem;
+  }
+  .a-game--dialogText {
+    outline: none !important;
+  }
+  .a-game--dialogName {
+    font-family: FiraCodeMedium, monospace;
+    font-size: 1.5em;
+    font-weight: 500;
+    line-height: 1;
+  }
+  .a-game--dialogName:empty {
+    display: none;
+  }
+  .a-game--dialogDescription {
+    font-family: RobotoLight, sans-serif;
+    font-weight: 300;
+    margin-top: 0.5rem;
+  }
+  .a-game--dialogDescription:empty {
+    display: none;
+  }
+  .a-game--dialogActions {
+    list-style-type: none;
+    margin-top: 3rem;
+  }
+  .a-game--dialogActions li {
+    display: inline-block;
+    margin-right: 1rem;
   }
