--- a/src/css/app/game.css
+++ b/src/css/app/game.css
@@ -36,6 +36,7 @@
     background-color: #000000;
     font-family: FiraCodeRegular, monospace;
     font-size: 1.5em;
+    padding: 0 0.25rem;
     width: fit-content;
   }
     .a-game--description-undiscovered {
@@ -78,7 +79,9 @@
       font-weight: 500;
     }
     .a-game--attribute-instrument.a-game--attribute-undiscovered {
-      background-color: #888888;
+      animation: a-game--attribute-undiscovered-instrument 1s ease 0s infinite alternate both;
+      background-color: #FFFFFF;
+      color: #000000;
     }
 
   /* Navigation */
@@ -94,8 +97,8 @@
   }
   .a-game--nav button {
     background-color: #000000;
-    border: 1px solid #FF0069;
-    border-radius: 0.125em;
+    border: 0.125rem solid #FF0069;
+    border-radius: 0.125rem;
     height: 2em;
     line-height: 2em;
     margin: 1px;
@@ -136,6 +139,12 @@
     font-weight: 300;
     height: unset !important;
     margin-top: 2rem !important;
+    opacity: 0.5;
+  }
+  .a-game--menu:active,
+  .a-game--menu:focus,
+  .a-game--menu:hover {
+    opacity: 1;
   }
 
   .a-game--interact {
@@ -143,12 +152,19 @@
     font-family: FiraCodeRegular, monospace;
     height: unset !important;
     margin-bottom: 2rem !important;
+    opacity: 0.5;
     overflow: hidden;
     position: relative;
     padding-bottom: 0.25em !important;
   }
     .a-game--interact-instant {
       padding-bottom: 0 !important;
+    }
+    .a-game--interact-active,
+    .a-game--interact:active,
+    .a-game--interact:focus,
+    .a-game--interact:hover {
+      opacity: 1;
     }
   .a-game--interactProgress {
     background-color: #FFFFFF;
@@ -168,6 +184,9 @@
     width: 100%;
     z-index: 1;
   }
+  .a-game--interact-active .a-game--interactProgressBackground {
+    background-color: #FF0069;
+  }
   .a-game--interact-instant .a-game--interactProgress,
   .a-game--interact[aria-disabled="true"] .a-game--interactProgress {
     display: none;
@@ -180,6 +199,7 @@
   /* Dialog */
   .a-game--dialog {
     align-items: center;
+    backdrop-filter: blur(0.25rem);
     background-color: hsla(335deg 100% 5% / 85%);
     display: flex;
     height: 100%;
@@ -194,6 +214,7 @@
     z-index: 9;
   }
   .a-game--dialog[aria-hidden="true"] {
+    backdrop-filter: blur(0);
     opacity: 0;
     pointer-events: none;
   }
@@ -238,3 +259,12 @@
     display: inline-block;
     margin-right: 1rem;
   }
+
+@keyframes a-game--attribute-undiscovered-instrument {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.333;
+  }
+}
